2015-01-09  Ian Lance Taylor  <iant@google.com>

	* Initial implementation.